# flaskProject/static/swagger.yaml
@@ -13,8 +13,8 @@ servers:
 tags:
 - name: user
   description: Operations with user
-- name: statistic
-  description: User statistic
+- name: edition
+  description: Note editions
 - name: note
   description: Operations with note
 
@@ -33,7 +33,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/createuser'
+              $ref: '#/components/schemas/User'
         required: true
       responses:
         200:
@@ -88,35 +88,6 @@ paths:
 
 
   /user/{user_id}:
-    get:
-      tags:
-      - user
-      summary: Get User by id
-      operationId: getUser
-      parameters:
-      - name: user_id
-        in: path
-        description: 'User ID'
-        required: true
-        schema:
-          type: integer
-      responses:
-        200:
-          description: Target user
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  oneOf:
-                    - $ref: '#/components/schemas/User'
-                    - $ref: '#/components/schemas/MessageStatistic'
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "User is not found"
-      security:
-        - ApiKeyAuth: [ ]
 
     put:
       tags:
@@ -135,7 +106,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserUpdate'
+              $ref: '#/components/schemas/User'
         required: true
       responses:
         200:
@@ -167,16 +138,13 @@ paths:
       security:
       - ApiKeyAuth: [ ]
 
-
-
-
-  /statistic/{user_id}:
+  /edition/{user_id}:
 
     post:
       tags:
-      - statistic
-      summary: Add statistic
-      operationId: add_statistic
+      - edition
+      summary: Add edition
+      operationId: add_edition
       parameters:
       - name: user_id
         in: path
@@ -185,11 +153,11 @@ paths:
         schema:
           type: integer
       requestBody:
-        description: Add new statistic
+        description: Add new note edition
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MessageStatistic'
+              $ref: '#/components/schemas/Edition'
         required: true
       responses:
         200:
@@ -199,7 +167,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/MessageStatistic'
+                  $ref: '#/components/schemas/Edition'
         405:
           description: "Invalid input"
       security:
@@ -207,9 +175,9 @@ paths:
 
     get:
       tags:
-      - statistic
-      summary: Show statistic list
-      operationId: show_statistic
+      - edition
+      summary: Show edition
+      operationId: show_edition
       parameters:
       - name: user_id
         in: path
@@ -219,13 +187,13 @@ paths:
           type: integer
       responses:
         200:
-          description: Successful showed list
+          description: Successful showed edition
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/MessageStatistic'
+                  $ref: '#/components/schemas/Edition'
         405:
           description: "Operation crashed!"
       security:
@@ -233,9 +201,9 @@ paths:
 
     put:
       tags:
-      - statistic
-      summary: Edit statictic
-      operationId: editStatictic
+      - edition
+      summary: Edit edition
+      operationId: editEdition
       parameters:
       - name: user_id
         in: path
@@ -248,7 +216,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/StatisticEdit'
+              $ref: '#/components/schemas/Edition'
         required: true
       responses:
         200:
@@ -263,6 +231,23 @@ paths:
         - ApiKeyAuth: [ ]
 
 
+    delete:
+      tags:
+      - edition
+      summary: Delete edition
+      operationId: deleteEdition
+      parameters:
+      - name: user_id
+        in: path
+        description: 'Id of a target user'
+        required: true
+        schema:
+          type: integer
+      responses:
+        400:
+          description: "Invalid ID supplied"
+      security:
+      - ApiKeyAuth: [ ]
 
   /note/{user_id}:
 
@@ -291,43 +276,12 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  oneOf:
-                    - $ref: '#/components/schemas/Note'
-                    - $ref: '#/components/schemas/MessageStatistic'
+                $ref: '#/components/schemas/Note'
         405:
           description: "Invalid input"
       security:
         - ApiKeyAuth: [ ]
 
-    get:
-      tags:
-      - note
-      summary: Show note
-      operationId: show_note
-      parameters:
-      - name: user_id
-        in: path
-        description: 'User ID'
-        required: true
-        schema:
-          type: integer
-      responses:
-        200:
-          description: Successful showed note
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  oneOf:
-                    - $ref: '#/components/schemas/Note'
-                    - $ref: '#/components/schemas/MessageStatistic'
-        405:
-          description: "Operation crashed!"
-      security:
-        - ApiKeyAuth: [ ]
 
     put:
       tags:
@@ -346,7 +300,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NoteEdit'
+              $ref: '#/components/schemas/Note'
         required: true
       responses:
         200:
@@ -354,7 +308,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StatusResponse'
+                type: array
+                items:
+                  oneOf:
+                    - $ref: '#/components/schemas/Note'
+                    - $ref: '#/components/schemas/Edition'
         400:
           description: "Invalid ID supplied"
       security:
@@ -377,7 +335,6 @@ paths:
           description: "Invalid ID supplied"
       security:
       - ApiKeyAuth: [ ]
-
 
 
   /note/{tag}:
@@ -404,37 +361,22 @@ paths:
                 items:
                   oneOf:
                     - $ref: '#/components/schemas/Note'
-                    - $ref: '#/components/schemas/MessageStatistic'
+                    - $ref: '#/components/schemas/Edition'
         405:
           description: "Operation crashed!"
       security:
         - ApiKeyAuth: [ ]
 
 
-
-
 components:
   schemas:
-    createuser:
-      required:
-      - login
-      - password
-      - user_name
-      type: object
-      properties:
-        login:
-          type: string
-        password:
-          type: string
-        user_name:
-          type: string
 
     User:
       required:
       - login
       - password
       - user_name
-      - id
+      - user_id
       type: object
       properties:
         login:
@@ -443,18 +385,42 @@ components:
           type: string
         user_name:
           type: string
-        id:
+        user_id:
+          type: integer
+
+    Edition:
+      required:
+      - user_id
+      - note_id
+      - time_of_edition
+      - editet_text
+      type: object
+      properties:
+        user_id:
+          type: integer
+        note_id:
+          type: integer
+        time_of_edition:
+          type: number
+        text:
           type: string
 
-    UserUpdate:
+    Note:
+      required:
+      - text
+      - tag
+      - user_id
+      - note_id
       type: object
       properties:
-        login:
+        text:
           type: string
-        password:
+        tag:
           type: string
-        user_name:
+        user_id:
           type: string
+        note_id:
+          type: integer
 
     StatusResponse:
       required:
@@ -468,58 +434,6 @@ components:
         message:
           type: string
 
-    MessageStatistic:
-      required:
-      - note_id
-      - edit_history
-      - num_of_editions
-      type: object
-      properties:
-        note_id:
-          type: string
-        edit_history:
-          type: string
-        num_of_editions:
-          type: integer
-
-    StatisticEdit:
-      type: object
-      properties:
-        note_id:
-          type: string
-        edit_history:
-          type: string
-        num_of_editions:
-          type: integer
-
-    Note:
-      required:
-      - text
-      - list_of_available_editors
-      - author_id
-      - tag
-      type: object
-      properties:
-        text:
-          type: string
-        list_of_available_editors:
-          type: string
-        author_id:
-          type: string
-        tag:
-          type: string
-
-    NoteEdit:
-      type: object
-      properties:
-        text:
-          type: string
-        list_of_available_editors:
-          type: string
-        author_id:
-          type: string
-        tag:
-          type: string
 
   securitySchemes:
     ApiKeyAuth:
